# OOP-Uni

1/: .gitignore  AbstractSerializer.hpp  AbstractValidator.hpp  CMakeLists.txt  Car.cpp  Car.hpp  CarSerializer.cpp  CarSerializer.hpp  CarTomlValidator.cpp  CarTomlValidator.hpp  IOException.cpp  IOException.hpp  Makefile  README.md  TestValidator.cpp  TestValidator.hpp  ValidationException.cpp  ValidationException.hpp  doxygen.in  doxygen_conf  main.cpp  test.cpp
1/src/: Car.cpp  CarSerializer.cpp  CarTomlValidator.cpp  IOException.cpp  TestValidator.cpp  ValidationException.cpp
1/src/include/: AbstractSerializer.hpp  AbstractValidator.hpp  Car.hpp  CarSerializer.hpp  CarTomlValidator.hpp  IOException.hpp  TestValidator.hpp  ValidationException.hpp
1/test/: test.cpp
2/: CMakeLists.txt  LICENSE  README.md  doxygen.in  main.cpp
2/src/core/: InvalidStateException.cpp  Resource.cpp  ResourceTable.cpp
2/src/core/include/: InvalidStateException.hpp  Resource.hpp  ResourceTable.hpp
2/src/io/: Utils.cpp
2/src/io/include/: IOException.hpp  Utils.hpp
2/test/: test.cpp
